# ai_outbound_system

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 05c0543e20d8_outreach_message_provider_fields.py  1a585c4b68a1_add_marketing_pipeline_tables.py  2725d4eb8a75_initial_schema.py  6f4c2a1d9b3e_add_lead_notes_table.py  78f51ed407e1_reply_provider_tracking.py  7b1bfbea3bda_add_outreach_message_provider_columns.py  9ac543584d73_add_resend_fields_to_message.py  a1b2c3d4e5f6_add_lead_notes_table.py  a1b2c3d4e5f6_add_whatsapp_sessions.py  e46e530b6def_encrypt_secrets_at_rest.py
backend/app/: __init__.py  config.py  crypto.py  database.py  dependencies.py  main.py  rate_limit.py  security_utils.py
backend/app/api/: admin.py  analytics.py  auth.py  campaigns.py  companies.py  contacts.py  enrichment.py  export.py  inbox.py  leads.py  marketing.py  notes.py  notifications.py  outreach.py  research.py  router.py  tasks.py  webhooks.py  whatsapp_sessions.py  whatsapp_webhook.py
backend/app/models/: __init__.py  activity.py  api_key.py  audit.py  base.py  campaign.py  company.py  contact.py  deduplication.py  email_account.py  enrichment.py  follow_up.py  integration.py  job.py  lead.py  lead_source.py  marketing.py  message.py  note.py  notification.py  pipeline.py  reply.py  research.py  score.py  signal.py  suppression.py  team.py  user.py  whatsapp_session.py
backend/app/routers/: webhooks.py
backend/app/schemas/: admin.py  analytics.py  auth.py  company.py  contact.py  export.py  lead.py  marketing.py  note.py  notification.py  outreach.py  pipeline.py
backend/app/services/: activity_service.py  admin_service.py  analytics_service.py  campaign_service.py  export_service.py  follow_up_service.py  job_service.py  lead_service.py  notification_service.py
backend/app/services/ai/: __init__.py  audit_service.py  llm_service.py  personalization_engine.py  reply_classifier.py  research_agent.py  scoring_service.py  signal_detector.py
backend/app/services/email/: __init__.py  auto_responder.py  brevo_service.py  delivery.py  email_service.py  event_tracker.py  inbound_processor.py  inbox_service.py  resend_service.py
backend/app/services/enrichment/: __init__.py  apollo_adapter.py  base_adapter.py  builtwith_adapter.py  enrichment_service.py  hunter_adapter.py
backend/app/services/marketing/: __init__.py  audience_sources.py  brand_brain.py  budgets.py  enhanced_brand_brain.py  post_generator.py
backend/app/services/scraping/: __init__.py  base_adapter.py  csv_adapter.py  deduplicator.py  linkedin_adapter.py  normalizer.py  reddit_adapter.py  website_adapter.py
backend/app/services/webhooks/: svix_verify.py
backend/app/workers/: __init__.py  ai_tasks.py  base_task.py  celery_app.py  enrichment_tasks.py  inbox_tasks.py  marketing_tasks.py  outreach_tasks.py  scraping_tasks.py
backend/scripts/: pipeline_e2e.py
backend/services/: __init__.py
backend/services/acquisition_service/: __init__.py  google_maps_scraper.py  industry_configs.py  main.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/services/analytics_service/: main.py  router.py
backend/services/campaign_service/: main.py  router.py  tasks.py
backend/services/channel_service/: __init__.py  main.py  router.py  tasks.py
backend/services/crm_service/: __init__.py  ingestion.py  main.py  router.py
backend/services/identity_service/: __init__.py  main.py  router.py
backend/services/intelligence_service/: __init__.py  main.py  router.py  tasks.py
backend/shared/: __init__.py  app_factory.py  auth.py  db.py  events.py
backend/tests/: conftest.py  test_analytics.py  test_audit.py  test_auth.py  test_leads.py  test_marketing.py  test_outreach.py  test_pipeline_e2e.py  test_research.py  test_scoring.py  test_scraping.py  test_signals.py
docs/: INTERNET_FACING_MVP_REVIEW.md  (+2 more)
(+72 files in other folders)
