[project]
name = "ai-outbound-system"
version = "0.1.0"
description = "AI Outbound Operating System — Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "sqlmodel>=0.0.19,<1.0",
    "alembic>=1.13.0,<2.0",
    "asyncpg>=0.29.0,<1.0",
    "celery[redis]>=5.4.0,<6.0",
    "redis>=5.0.0,<6.0",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "httpx>=0.27.0,<1.0",
    "phonenumbers>=8.13.0,<9.0",
    "trafilatura>=1.6.0,<2.0",
    "playwright>=1.44.0,<2.0",
    "openai>=1.0.0,<2.0",
    "anthropic>=0.25.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]