[project]
name = "ai-outbound-system"
version = "0.1.0"
description = "AI Outbound Operating System — Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "sqlmodel>=0.0.19,<1.0",
    "alembic>=1.13.0,<2.0",
    "asyncpg>=0.29.0,<1.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "pgvector>=0.3.0,<1.0",
    "celery[redis]>=5.4.0,<6.0",
    "redis>=5.0.0,<6.0",
    "pydantic[email]>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.0.0,<4.1.0",
    "python-multipart>=0.0.9,<1.0",
    "httpx>=0.27.0,<1.0",
    "phonenumbers>=8.13.0,<9.0",
    "trafilatura>=1.6.0,<2.0",
    "playwright>=1.44.0,<2.0",
    "openai>=1.0.0,<2.0",
    "anthropic>=0.25.0,<1.0",
    "resend>=2.0.0",
    "sib-api-v3-sdk>=7.6.0",
    "aioimaplib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (l, I, O)
    "W292",   # no newline at end of file — pre-existing pattern
    "W293",   # whitespace before blank line — pre-existing pattern
    "W291",   # trailing whitespace — pre-existing pattern
    "I001",   # import sorting — pre-existing intentional ordering
    "F401",   # unused imports — re-exports and future use
    "F541",   # f-string without placeholders — pre-existing
    "F841",   # unused variable — pre-existing
    "F821",   # undefined name — pre-existing (forward refs)
    "UP006",  # use `list` instead of `List` — gradual migration
    "UP035",  # import from `collections.abc` — pre-existing
    "UP045",  # use `X | None` instead of `Optional` — gradual migration
    "UP017",  # use datetime.UTC — pre-existing timezone.utc pattern
    "UP011",  # unnecessary parentheses in unpacked import — pre-existing
    "UP042",  # replace `Collection` with `AbstractSet` — pre-existing
    "UP007",  # use `X | Y` for Union — gradual migration
]

[tool.setuptools.packages.find]
include = ["app*", "services*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
